@@ -21,6 +21,8 @@ Unreleased -
          - fix mysql module compilation on Debian 11 / gcc 10
   - in vadddomain, remove domain if the postmaster user can't be created
   - add minimum and maximum length of parameters in error messages
+  - add an option --enable-min-pwd-length to choose minimum password length
+  - add an option --enable-tinycdb to replace cdb code by libcdb
 
 5.4.33 -
   Matt Brookings
